--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,9 @@
     <title>Olimpíadas</title>
 </head>
 <body>
+     <div class = "nico">
+       <h2 class="blink">Feito por Nicolas França Castro Rosa</h2>
+  </div>
     <header><h1>Atletas do Brasil</h1></header>
     <main>
         <section >
